# ioi-enumerate

./: .gitignore  README.md  basic_test_prompt.py  gen_blog_figs.py  get_logits.py  ioi_constants.py  ioi_datasets.py  names.py  plot_results.ipynb  plot_results_new.ipynb  pyproject.toml  run_sweep.sh  utils.py
